[gd_scene load_steps=38 format=3 uid="uid://biva5a2pmxany"]

[ext_resource type="Script" uid="uid://dmteus8fkpmy0" path="res://scripts/planta.gd" id="1_jgb6y"]
[ext_resource type="Texture2D" uid="uid://ce8w84s2w665p" path="res://assets/sprites/plantas prueba.png" id="2_xn2fm"]
[ext_resource type="Texture2D" uid="uid://co8u6fqe2dsfh" path="res://assets/sprites/plantas intoxicadas.png" id="3_fqqf3"]
[ext_resource type="Texture2D" uid="uid://8ho8nlpem43f" path="res://assets/sprites/plantas muertas.png" id="4_l7v54"]
[ext_resource type="Script" uid="uid://dba1tiwt5tcmg" path="res://scripts/tossable_component.gd" id="5_l7v54"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fqqf3"]
atlas = ExtResource("2_xn2fm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh4cr"]
atlas = ExtResource("3_fqqf3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sim7t"]
atlas = ExtResource("4_l7v54")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7v54"]
atlas = ExtResource("2_xn2fm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk18h"]
atlas = ExtResource("3_fqqf3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgcbf"]
atlas = ExtResource("4_l7v54")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwxyx"]
atlas = ExtResource("2_xn2fm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cibu5"]
atlas = ExtResource("3_fqqf3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i0gd"]
atlas = ExtResource("4_l7v54")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_topu5"]
atlas = ExtResource("2_xn2fm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2pg2"]
atlas = ExtResource("3_fqqf3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib4fn"]
atlas = ExtResource("4_l7v54")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vi7p"]
atlas = ExtResource("2_xn2fm")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogqu2"]
atlas = ExtResource("3_fqqf3")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjfdo"]
atlas = ExtResource("4_l7v54")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgb6y"]
atlas = ExtResource("2_xn2fm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn2fm"]
atlas = ExtResource("2_xn2fm")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hplj"]
atlas = ExtResource("2_xn2fm")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbsjn"]
atlas = ExtResource("2_xn2fm")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggisn"]
atlas = ExtResource("2_xn2fm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnyj3"]
atlas = ExtResource("2_xn2fm")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_echmo"]
atlas = ExtResource("2_xn2fm")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_17cri"]
atlas = ExtResource("2_xn2fm")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h33k2"]
atlas = ExtResource("2_xn2fm")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgmxx"]
atlas = ExtResource("2_xn2fm")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iahgl"]
atlas = ExtResource("2_xn2fm")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t52ih"]
atlas = ExtResource("2_xn2fm")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_prmdn"]
atlas = ExtResource("2_xn2fm")
region = Rect2(64, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5hplj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqqf3")
}],
"loop": true,
"name": &"p1_lvl0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh4cr")
}],
"loop": true,
"name": &"p1_lvl0_i",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sim7t")
}],
"loop": true,
"name": &"p1_lvl0_m",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7v54")
}],
"loop": true,
"name": &"p1_lvl1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk18h")
}],
"loop": true,
"name": &"p1_lvl1_i",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgcbf")
}],
"loop": true,
"name": &"p1_lvl1_m",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwxyx")
}],
"loop": true,
"name": &"p1_lvl2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cibu5")
}],
"loop": true,
"name": &"p1_lvl2_i",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i0gd")
}],
"loop": true,
"name": &"p1_lvl2_m",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_topu5")
}],
"loop": true,
"name": &"p1_lvl3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2pg2")
}],
"loop": true,
"name": &"p1_lvl3_i",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib4fn")
}],
"loop": true,
"name": &"p1_lvl3_m",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vi7p")
}],
"loop": true,
"name": &"p1_lvl4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogqu2")
}],
"loop": true,
"name": &"p1_lvl4_i",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjfdo")
}],
"loop": true,
"name": &"p1_lvl4_m",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqqf3")
}],
"loop": true,
"name": &"p2_lvl0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgb6y")
}],
"loop": true,
"name": &"p2_lvl1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn2fm")
}],
"loop": true,
"name": &"p2_lvl2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hplj")
}],
"loop": true,
"name": &"p2_lvl3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbsjn")
}],
"loop": true,
"name": &"p2_lvl4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggisn")
}],
"loop": true,
"name": &"p3_lvl0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnyj3")
}],
"loop": true,
"name": &"p3_lvl1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_echmo")
}],
"loop": true,
"name": &"p3_lvl2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17cri")
}],
"loop": true,
"name": &"p3_lvl3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h33k2")
}],
"loop": true,
"name": &"p3_lvl4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggisn")
}],
"loop": true,
"name": &"p4_lvl0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgmxx")
}],
"loop": true,
"name": &"p4_lvl1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iahgl")
}],
"loop": true,
"name": &"p4_lvl2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t52ih")
}],
"loop": true,
"name": &"p4_lvl3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_prmdn")
}],
"loop": true,
"name": &"p4_lvl4",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tbsjn"]
radius = 2.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jgb6y"]
radius = 28.6356

[sub_resource type="Gradient" id="Gradient_l7v54"]
colors = PackedColorArray(0.458824, 0.54902, 0.321569, 0.717647, 0.705882, 0.529412, 0.341176, 0.717647)

[node name="planta" type="RigidBody2D"]
collision_layer = 2
collision_mask = 3
mass = 0.55
gravity_scale = 0.0
center_of_mass_mode = 1
center_of_mass = Vector2(0, 0.5)
sleeping = true
linear_damp = 5.0
angular_damp = 5.0
script = ExtResource("1_jgb6y")

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(0.795, 0.795)
sprite_frames = SubResource("SpriteFrames_5hplj")
animation = &"p1_lvl2_m"

[node name="collsh" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_tbsjn")

[node name="area" type="Area2D" parent="."]

[node name="area_collsh" type="CollisionShape2D" parent="area"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_tbsjn")

[node name="area_a_limpiar" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="ovalo_area_a_limpiar" type="CollisionShape2D" parent="area_a_limpiar"]
position = Vector2(0, -1)
scale = Vector2(1, 0.5)
shape = SubResource("CircleShape2D_jgb6y")

[node name="tossable_component" type="Node2D" parent="."]
script = ExtResource("5_l7v54")
metadata/_custom_type_script = "uid://dba1tiwt5tcmg"

[node name="area_a_regar" type="Area2D" parent="."]

[node name="ovalo_area_a_regar" type="CollisionShape2D" parent="area_a_regar"]
position = Vector2(0, -1)
scale = Vector2(0.5, 0.25)
shape = SubResource("CircleShape2D_jgb6y")

[node name="timer_intoxicacion" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="timer_curacion" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="particulas_intoxicacion_m" type="CPUParticles2D" parent="."]
amount = 7
lifetime = 10.0
randomness = 0.15
emission_shape = 5
emission_points = PackedVector2Array()
emission_normals = PackedVector2Array()
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 5.0
gravity = Vector2(0, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
orbit_velocity_min = -0.3
orbit_velocity_max = 0.3
radial_accel_min = -10.0
damping_min = 1.0
damping_max = 1.0
color_initial_ramp = SubResource("Gradient_l7v54")
hue_variation_min = -0.08
hue_variation_max = 0.07

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_entered" from="area_a_limpiar" to="." method="_on_area_a_limpiar_body_entered"]
[connection signal="body_exited" from="area_a_limpiar" to="." method="_on_area_a_limpiar_body_exited"]
[connection signal="body_entered" from="area_a_regar" to="." method="_on_area_a_regar_body_entered"]
[connection signal="timeout" from="timer_intoxicacion" to="." method="_on_timer_intoxicacion_timeout"]
[connection signal="timeout" from="timer_curacion" to="." method="_on_timer_curacion_timeout"]
